<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_icon"
            android:src="@android:drawable/sym_def_app_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_app_name"
                android:textColor="@color/title"
                android:textFontWeight="700"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/packageName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_package_name"
                android:textColor="@color/content"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|end"
            android:text="@string/example_version_name"
            android:textColor="@color/content"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/progressIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/loading" />

        <TextView
            android:id="@+id/progressMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/content"
            android:textFontWeight="800"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/hints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/content"
        android:textFontWeight="800"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_bg"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textFontWeight="700" />

        <Button
            android:id="@+id/install"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_bg"
            android:text="@string/install"
            android:textColor="#ffffff"
            android:textFontWeight="700"
            android:visibility="gone" />

        <Button
            android:id="@+id/open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_bg"
            android:text="@string/open"
            android:textColor="#ffffff"
            android:textFontWeight="700"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>